--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <div class="result"></div>
     <div class="operators"> 
-        <button>+</button>
-        <button>-</button>
-        <button>x</button>
-        <button>/</button>
-        <button>=</button>
+        <button class="plus">+</button>
+        <button class="minus">-</button>
+        <button class="times">x</button>
+        <button class="divided">/</button>
+        <button class="equal">=</button>
     </div>
     <div class="number">
         <div><button class="btn1">1</button><button class="btn2">2</button><button class="btn3">3</button></div>
